@@ -30,6 +30,7 @@ struct Compatibility_t
 {
     bool fix_pokey_collapse;
     bool fix_platforms_acceleration;
+    bool fix_player_filter_bounce;
 };
 
 extern Compatibility_t g_compatibility;
