@@ -8,6 +8,7 @@ Changes for 1.3.3.2
 -Fixed the vanilla bug: free-falling platforms getting confused when the player changes their power-up state
 -Fixed an inability to autostart events when "restart level after death" mode is enabled on the world map
 -Fixed the case when Pokey getting collapsed during walking on slopes
+-Fixed an unwanted player bounce by a filter block after NPC stomp
 
 Changes for 1.3.3.1
 -Fixed a crash, caused by the incremental locked warps counter that leads BGO array exciting
